--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M9</version>
 				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
+					          <skipTests>true</skipTests>
 				</configuration>
 			</plugin>
 
